--- a/node-web/views/history.hbs
+++ b/node-web/views/history.hbs
@@ -15,9 +15,12 @@
             <p class="icon-text">Smart Lock</p>
         </div>
         <nav>
-            <a href="../css/home.html" class="button">Home</a>
+          <div class="left-header">
+            <a href="/history" class="button">Home</a>
             <a href="/profile" class="button">Profile</a>
-            <a href="../css/signout.html" class="button">Sign out</a>
+            <a href="/signout" class="button">Sign out</a>
+            <p>Hello {{user.username}}</p>
+          </div>
         </nav>
     </header>
     <main>
