--- a/node-web/views/profile.hbs
+++ b/node-web/views/profile.hbs
@@ -16,9 +16,12 @@
         </div>
 
         <nav>
-            <a href="../css/home.html" class="button">Home</a>
+          <div class="left-header">
+            <a href="/history" class="button">Home</a>
             <a href="/profile" class="button">Profile</a>
-            <a href="../css/signout.html" class="button">Sign out</a>
+            <a href="/signout" class="button">Sign out</a>
+            <p>Hello {{user.username}}</p>
+          </div>
         </nav>
     </header>
    <main>
