--- a/node-web/views/profile.hbs
+++ b/node-web/views/profile.hbs
@@ -17,8 +17,8 @@
 
         <nav>
           <div class="left-header">
-            <a href="/history" class="button">Home</a>
-            <a href="/profile" class="button">Profile</a>
+            <a href="/{{userId}}/history" class="button">Home</a>
+            <a href="/{{userId}}/profile" class="button">Profile</a>
             <a href="/signout" class="button">Sign out</a>
             <p>Hello {{user.username}}</p>
           </div>
@@ -26,7 +26,7 @@
     </header>
    <main>
   <section class="profile-container">
-    <form action="/update-profile" method="post">
+    <form action="/{{userId}}/update-profile" method="post">
     <div class="profile-field">
       <label>Email</label>
       <input type="email" value="{{user.email}}" >
