--- a/node-web/views/history.hbs
+++ b/node-web/views/history.hbs
@@ -16,9 +16,9 @@
         </div>
         <nav>
           <div class="left-header">
-            <a href="/history" class="button">Home</a>
-            <a href="/profile" class="button">Profile</a>
-            <a href="/signout" class="button">Sign out</a>
+            <a href="/{{userID}}/history" class="button">Home</a>
+            <a href="/{{userID}}/profile" class="button">Profile</a>
+            <a href="/{{userID}}/signout" class="button">Sign out</a>
             <p>Hello {{user.username}}</p>
           </div>
         </nav>
