Update monitor file

--- a/node-web/views/monitor.hbs
+++ b/node-web/views/monitor.hbs
@@ -8,16 +8,33 @@
 </head>
 <body>
 
-  <div class="navbar">
-    <button>Home</button>
-    <button>Profile</button>
-    <button>Sign out</button>
-  </div>
+  
+  <header>
+    <div class="logo">
+        <a href="../css/index.html">
+            <img src="../asset/lock.png" alt="Lock icon" class="icon-img">
+        </a>
+        <p class="icon-text">Smart Lock</p>
+    </div>
 
-  <div class="sidebar">
-    <button>Monitor</button>
-    <button>History</button>
-  </div>
+    <nav>
+      <div class="left-header">
+        <a href="/{{userId}}/history" class="button">Home</a>
+        <a href="/{{userId}}/profile" class="button">Profile</a>
+        <a href="/signout" class="button">Sign out</a>
+        <p>Hello {{user.username}}</p>
+      </div>
+    </nav>
+</header>
+<main>
+  <aside>
+      <a href="/{{userId}}/monitor">
+        <button class="side-btn">Monitor</button>
+      </a>
+      <button class="side-btn">History</button>
+      <button class="side-btn" onclick="controlLock('Lock')">Lock</button>
+      <button class="side-btn" onclick="controlLock('Unlock')">Unlock</button>
+  </aside>
 
   <div class="content">
     <div class="card">
@@ -37,6 +54,7 @@
       <p>Sound Alert</p>
     </div>
   </div>
+</main>
 
 </body>
 <script>
