--- a/node-web/public/css/profile.css
+++ b/node-web/public/css/profile.css
@@ -218,3 +218,163 @@ main {
 .delete-btn:hover {
   color: red;
 }
+
+/* General reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+}
+
+/* Header */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
+.icon-img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.logo {
+  font-size: 1.5rem;
+
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.left-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+header nav .button {
+  text-decoration: none;
+  margin: 0 10px;
+  color: #333;
+  padding: 8px 12px;
+  border-radius: 8px;
+}
+
+header nav .button:hover {
+  background-color: #ddd;
+}
+
+
+.nav-btn {
+  margin-left: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #3ec9a7;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.signout {
+  background-color: #f3425f;
+}
+
+/* Main Layout */
+main {
+  display: flex;
+  margin-top: 1rem;
+}
+/* Sidebar */
+aside {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+.side-btn {
+  padding: 0.8rem;
+  background-color: #6d7a8a;
+  border: none;
+  color: white;
+  text-align: left;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* History Table Section */
+.history-table {
+  flex: 1;
+  padding: 1rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #ffffff;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+thead {
+  background-color: #f8c471;
+}
+
+th, td {
+  padding: 0.8rem;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+
+.navbar {
+  position: fixed; 
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 20px;
+  z-index: 10;
+  margin-right: 20px;
+}
+
+
+.button {
+  background-color: #33a399;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  color: white !important;
+  font-size: 20px;
+  
+  cursor: pointer;
+  
+}
+
+.button:nth-child(2) {
+  background-color: #003f54;
+}
+
+.button:nth-child(3) {
+  background-color: #c5c6c7;
+  color: black !important;
+  margin-right: 60px;
+}
