--- a/node-web/public/css/history.css
+++ b/node-web/public/css/history.css
@@ -79,14 +79,15 @@ aside {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    padding: 1.5rem;
+
 }
 .side-btn {
     padding: 0.8rem;
     background-color: #6d7a8a;
     border: none;
     color: white;
-    text-align: left;
+    text-align: center;
     border-radius: 5px;
     cursor: pointer;
 }
