--- a/node-web/views/notify_password.hbs
+++ b/node-web/views/notify_password.hbs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email has been sent</title>
+  <title>Notification!</title>
 </head>
 <body>
   <script>
-    alert("We has sent email for reset password!")
+    alert({{message}})
     window.location.href = '/login'
   </script>
 </body>
