--- a/node-web/views/profile.hbs
+++ b/node-web/views/profile.hbs
@@ -43,7 +43,7 @@
       <button class="password-btn">Reset password</button>
       </a>
     </div>
-    <div class="profile-field">
+    {{!-- <div class="profile-field">
       <label>Fingerprint</label>
       <div class="fingerprint-list">
         <div class="fingerprint-item">
@@ -59,7 +59,7 @@
           <button class="delete-btn">&#128465;</button>
         </div>
       </div>
-    </div>
+    </div> --}}
   </section>
 </main>
 
